--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="password">Password</string>
     <string name="connection_button">Sign in</string>
     <string name="forgotten_username_password">Forgot Username or Password?</string>
-    <string name="create_account">Create an Account</string>
+    <string name="create_account">Create an account</string>
 </resources>
