--- a/app/src/main/res/values-fr-rBE/strings.xml
+++ b/app/src/main/res/values-fr-rBE/strings.xml
@@ -10,4 +10,5 @@
     <string name="my_preferences">Mes préférences</string>
     <string name="travel_themes">Thèmes de voyage</string>
     <string name="prefered_accomodations_types">Mes types de logements préférés</string>
+    <string name="pack_name">Nom du pack</string>
 </resources>
