--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,9 @@
     <string name="travel_themes">Travel themes</string>
     <string name="prefered_accomodations_types">My prefered accomodation\'s types</string>
     <string name="pack_name">Pack name</string>
+    <string name="action_settings">Settings</string>
+    <string name="forward_path">Forward path</string>
+    <string name="return_trip">Return trip</string>
+    <string name="departure_place">Departure place</string>
+    <string name="departure_place_value">Departure place value</string>
 </resources>
