--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="return_trip">Return trip</string>
     <string name="departure_place">Departure place</string>
     <string name="departure_place_value">Departure place value</string>
+    <string name="book_this_pack_button">Book this pack</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
