--- a/app/src/main/res/values-fr-rBE/strings.xml
+++ b/app/src/main/res/values-fr-rBE/strings.xml
@@ -35,4 +35,5 @@
     Description de pack Description de pack Description de pack Description de pack
     Description de pack Description de pack Description de pack Description de pack
     Description de pack Description de pack Description de pack Description de pack </string>
+    <string name="pack_booking_nb_travelers">Nombre de voyageurs</string>
 </resources>
