--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     Pack Description Pack Description Pack Description Pack Description Pack Description Pack Description
     Pack Description Pack Description Pack Description Pack Description Pack Description Pack Description
     Pack Description Pack Description Pack Description Pack Description Pack Description </string>
+    <string name="pack_booking_nb_travelers">Number of travelers</string>
 </resources>
