--- a/app/src/main/res/values-fr-rBE/strings.xml
+++ b/app/src/main/res/values-fr-rBE/strings.xml
@@ -28,11 +28,17 @@
     <string name="pack_details_show_activity_fragment">Activités</string>
     <string name="pack_details_show_flights_fragment">Vols</string>
     <string name="pack_details_show_accommodations_fragment">Logements</string>
-    <string name="pack_description">Description de pack Description de pack Description de pack
-    Description de pack Description de pack Description de pack Description de pack
-    Description de pack Description de pack Description de pack Description de pack
-    Description de pack Description de pack Description de pack Description de pack
-    Description de pack Description de pack Description de pack Description de pack </string>
+    <string name="pack_description">"Voyage voyage Au dessus des vieux volcans\n"
+                "Glissent des ailes sous les tapis du vent\n"
+                "Voyage, voyage\n"
+                "Éternellement\n"
+                "De nuages en marécages\n"
+                "De vent d'Espagne en pluie d'équateur\n"
+                "Voyage, voyage\n"
+                "Vole dans les hauteurs\n"
+                "Au dessus des capitales\n"
+                "Des idées fatales\n"
+                "Regardent l'océan"</string>
     <string name="pack_booking_nb_travelers">Nombre de voyageurs</string>
     <string name="flight_seats_booking_title">Choisissez vos places</string>
     <string name="book_housing_rooms_title">Choisissez vos chambres</string>
