--- a/app/src/main/res/values-fr-rBE/strings.xml
+++ b/app/src/main/res/values-fr-rBE/strings.xml
@@ -59,7 +59,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="please_enter_a_number_of_traveler">Veuillez entrer le nombre de voyageurs</string>
     <string name="booking_activities_general_info">* Le nombre d\'activités ajoutées à la réservation dépend du nombre de voyageurs
-        \n* Seuls les activités payantes sont affichées ci-dessous</string>
+        \n* Seuls les activités payantes sont affichées ci-dessus</string>
     <string name="comment_text">Comment text placeholder</string>
     <string name="comment_section_title">Commentaires</string>
     <string name="my_bookings_section_title">MES RESERVATIONS</string>
