--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,7 +58,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="please_enter_a_number_of_traveler">Please enter the number of travelers</string>
     <string name="booking_activities_general_info">* The number of activities added to the booking depends on the number of travelers
-    \n* Only the paying activities are being displayed below</string>
+    \n* Only the paying activities are being displayed above</string>
     <string name="comment_text">Comment text placeholder</string>
     <string name="comment_section_title">Comment section</string>
     <string name="my_bookings_section_title">MY BOOKINGS</string>
