--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,7 @@
     <string name="comment_text">Comment text placeholder</string>
     <string name="comment_section_title">Comment section</string>
     <string name="my_bookings_section_title">MY BOOKINGS</string>
+    <string name="comment_hint">Write a comment</string>
+    <string name="comment_is_empty">Your comment is empty</string>
+    <string name="delete_comment_button">Delete my comment</string>
 </resources>
