--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,4 +65,8 @@
     <string name="comment_hint">Write a comment</string>
     <string name="comment_is_empty">Your comment is empty</string>
     <string name="delete_comment_button">Delete my comment</string>
+    <string name="accommodation_list_title">Housing</string>
+    <string name="accommodation_name">Accommodation name</string>
+    <string name="accommodation_description">Accommodation description</string>
+    <string name="locality">Locality</string>
 </resources>
