--- a/app/src/main/res/values-fr-rBE/strings.xml
+++ b/app/src/main/res/values-fr-rBE/strings.xml
@@ -78,4 +78,5 @@
     <string name="ACTI_TAG_PREF_2">ActTag2</string>
     <string name="ACTI_TAG_PREF_3">ActTag3</string>
     <string name="acti_tag_pref_limit">*Maximum 3 activités sélectionnées</string>
+    <string name="load_more_button">-> Plus de packs</string>
 </resources>
