--- a/app/src/main/res/values-fr-rBE/strings.xml
+++ b/app/src/main/res/values-fr-rBE/strings.xml
@@ -7,6 +7,7 @@
     <string name="forgotten_username_password">Nom d\'utilisateur ou mot de passe oublié ?</string>
     <string name="password">Mot de passe</string>
     <string name="username">Nom d\'utilisateur</string>
+    <string name="email">Email</string>
     <string name="my_preferences">Mes préférences</string>
     <string name="travel_themes">Thèmes de voyage</string>
     <string name="prefered_accomodations_types">Mes types de logements préférés</string>
@@ -79,4 +80,7 @@
     <string name="ACTI_TAG_PREF_3">ActTag3</string>
     <string name="acti_tag_pref_limit">*Maximum 3 activités sélectionnées</string>
     <string name="load_more_button">-> Plus de packs</string>
+    <string name="first_name">Prénom</string>
+    <string name="last_name">Nom de famille</string>
+    <string name="confirm_password">Confirmez votre mot de passe</string>
 </resources>
