--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,4 +82,10 @@
     <string name="first_name">First name</string>
     <string name="last_name">Last name</string>
     <string name="confirm_password">Confirm password</string>
+    <string name="error_during_sign_up">An error occurred while creating your account</string>
+    <string name="email_already_exists">Your email address already exists</string>
+    <string name="registration_successful">Registration successful</string>
+    <string name="wrong_account_information">Wrong account information</string>
+    <string name="invalid_account_information">Invalid login information</string>
+    <string name="ACCESS_TOKEN">ACCESS_TOKEN</string>
 </resources>
