--- a/app/src/main/res/values-fr-rBE/strings.xml
+++ b/app/src/main/res/values-fr-rBE/strings.xml
@@ -101,4 +101,5 @@
     <string name="wrong_account_information">Informations de compte invalides</string>
     <string name="invalid_account_information">Informations de compte invalides</string>
     <string name="ACCESS_TOKEN">ACCESS_TOKEN</string>
+    <string name="email">Addresse email</string>
 </resources>
