--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,17 +90,15 @@
     <string name="can_not_contain_special_character">This field can not contain special character</string>
     <string name="must_be_email">This field must match with an email address</string>
     <string name="min_character_password">Password must contain at least 8 characters</string>
-    <string name="password_must_contain_digit">Password must containt at least one digit</string>
+    <string name="password_must_contain_digit">Password must contain at least one digit</string>
     <string name="password_must_contain_capital_letter">Password must contain at least one capital letter</string>
     <string name="password_must_contain_small_letter">Password must contain at least one small letter</string>
     <string name="must_match_password">This field must match with password</string>
-    <string name="first_name">First name</string>
-    <string name="last_name">Last name</string>
-    <string name="confirm_password">Confirm password</string>
     <string name="error_during_sign_up">An error occurred while creating your account</string>
     <string name="email_already_exists">Your email address already exists</string>
     <string name="registration_successful">Registration successful</string>
     <string name="wrong_account_information">Wrong account information</string>
     <string name="invalid_account_information">Invalid login information</string>
     <string name="ACCESS_TOKEN">ACCESS_TOKEN</string>
+    <string name="email">Email address</string>
 </resources>
