--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,4 +101,5 @@
     <string name="invalid_account_information">Invalid login information</string>
     <string name="ACCESS_TOKEN">ACCESS_TOKEN</string>
     <string name="email">Email address</string>
+    <string name="button_sign_up">Sign up</string>
 </resources>
