--- a/app/src/main/res/values-fr-rBE/strings.xml
+++ b/app/src/main/res/values-fr-rBE/strings.xml
@@ -96,7 +96,7 @@
     <string name="must_match_password">Ce champ doit correspondre au mot de passe</string>
     <string name="first_name">Prénom</string>
     <string name="error_during_sign_up">Erreur lors de la création du compte</string>
-    <string name="email_already_exists">Your email address already exists</string>
+    <string name="email_or_username_already_exists">Votre email ou nom d\'utilisateur est déjà pris</string>
     <string name="registration_successful">Votre nouveau compte a été enregistré, connection en cours</string>
     <string name="wrong_account_information">Informations de compte invalides</string>
     <string name="invalid_account_information">Informations de compte invalides</string>
