--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,7 +95,7 @@
     <string name="password_must_contain_small_letter">Password must contain at least one small letter</string>
     <string name="must_match_password">This field must match with password</string>
     <string name="error_during_sign_up">An error occurred while creating your account</string>
-    <string name="email_already_exists">Your email address already exists</string>
+    <string name="email_or_username_already_exists">Your email address already exists</string>
     <string name="registration_successful">Registration successful, logging you in</string>
     <string name="wrong_account_information">Wrong account information</string>
     <string name="invalid_account_information">Invalid login information</string>
