--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,4 +103,5 @@
     <string name="email">Email address</string>
     <string name="button_sign_up">Sign up</string>
     <string name="internal_server_error">Server error</string>
+    <string name="no_connection">You are not connected to internet</string>
 </resources>
