--- a/app/src/main/res/values-fr-rBE/strings.xml
+++ b/app/src/main/res/values-fr-rBE/strings.xml
@@ -105,4 +105,5 @@
     <string name="button_sign_up">S\'inscrire</string>
     <string name="internal_server_error">Erreur du serveur</string>
     <string name="no_connection">Vous n\'êtes pas connecté à internet</string>
+    <string name="scroll_down_for_more">Scrollez vers le bas pour voir les packs suivants</string>
 </resources>
