--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,4 +104,5 @@
     <string name="button_sign_up">Sign up</string>
     <string name="internal_server_error">Server error</string>
     <string name="no_connection">You are not connected to internet</string>
+    <string name="scroll_down_for_more">Scroll down to see more</string>
 </resources>
