--- a/app/src/main/res/values-fr-rBE/strings.xml
+++ b/app/src/main/res/values-fr-rBE/strings.xml
@@ -106,4 +106,6 @@
     <string name="internal_server_error">Erreur du serveur</string>
     <string name="no_connection">Vous n\'êtes pas connecté à internet</string>
     <string name="scroll_down_for_more">Scrollez vers le bas pour voir les packs suivants</string>
+    <string name="reservation_successful">Réservation enregistrée !</string>
+    <string name="reservation_unsuccessful">Problème lors de la réservation</string>
 </resources>
