création de commentaire lie a l'api

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,5 +110,5 @@
     <string name="my_account">My account</string>
     <string name="my_username">My username</string>
     <string name="about_me">About me</string>
-
+    <string name="comment_creation_failed">Failed saving your comment</string>
 </resources>
