--- a/app/src/main/res/values-fr-rBE/strings.xml
+++ b/app/src/main/res/values-fr-rBE/strings.xml
@@ -111,4 +111,5 @@
     <string name="my_account">Mon compte</string>
     <string name="my_username">Mon nom d\'utilisateur</string>
     <string name="about_me">A propos de moi</string>
+    <string name="comment_creation_failed">Echec lors de la sauvegarde de votre commentaire</string>
 </resources>
