--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,7 +104,7 @@
     <string name="button_sign_up">Sign up</string>
     <string name="internal_server_error">Server error</string>
     <string name="no_connection">You are not connected to internet</string>
-    <string name="scroll_down_for_more">Scroll down to see more</string>
+    <string name="scroll_down_for_more">Go down to see more</string>
     <string name="reservation_successful">Reservation successful !</string>
     <string name="reservation_unsuccessful">Problem during the reservation</string>
     <string name="my_account">My account</string>
